Changelog
=========

2.0b2 (Unreleased)
------------------

- Fix Missing.Value for Creator in the catalog. Fixes #11634.
  [rossp]

- Don't add the annotation unless a comment is actually being added.
  Fixes #11370.
  [rossp]

- Fixed i18n of the "Commenting has been disabled." message.
  [vincentfretin]

- Add a moderator_email setting to control where moderator notifications are
  sent.
  [davisagli]

2.0b1 (2011-04-06)
------------------

- Make discussion.css cacheable when registering it.
  [davisagli]

- Fix issue where GMT datetimes were converted into local timezone DateTimes
  during indexing.
  [davisagli]

- Handle timezones correctly while converting dates during the migration of
  legacy comments.
  [davisagli]

- When returning a comment's title, give preference to its title attribute
  if set.
  [davisagli]

- Use the cooked text of legacy comments when migrating.
  [davisagli]

- Make sure that comment text is transformed to plain text when indexing.
  [davisagli]

- Move logic for transforming comment text to the Comment class's getText
  method. Use a comment instance's mime_type attribute in preference to the
  global setting for the source mimetype. Use text/x-html-safe as the target
  mimetype to make sure the safe HTML filter is applied, in case the source is
  untrusted HTML.
  [davisagli]

- Provide a filter_callback option to the migration view, so that a custom
  policy for which comments get migrated can be implemented.
  [davisagli]

- Fixed RoleManager import to avoid deprecation warning on Zope 2.13.
  [davisagli]

- French translations.
  [thomasdesvenain]

- Fixed internationalization issues.
  [thomasdesvenain]

- Added Afrikaans translations
  [jcbrand]

2.0a3 (2011-03-02)
------------------

- Fixed test failure for the default user portrait, which changed from
  defaultUser.gif to defaultUser.png in Products.PlonePAS 4.0.5
  [maurits]

2.0a2 (2011-02-08)
------------------
